examples/bad/9.emm
int main () {
  {
    int x = 3;
  }
  print(x);
  return 0;
}
